use URLEncoder/URLDecoder new method to simplify the code. Fix #27554